add audrey to authors

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,5 @@
 Kaitlin Carey <kaitlin1.carey@umontana.edu>
+Audrey Shingleton <audrey.shingleton@umontana.edu>
 George Lesica <george.lesica@umontana.edu>
 Travis Wheeler <travis.wheeler@umontana.edu>
 
